<resources>
    <string name="app_name">ExoPlayer Full Stack</string>

    <string name="player_activity_name">Media player</string>
    <string name="url_thumbnails">https://i.ibb.co/hBd4xN2/Big-Buck-Bunny-320x180.png</string>
    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="media_url_mp4">"https://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="logo">Google logo</string>
    <string name="btn_episode">Episodes</string>
    <string name="btn_lock_screen">Screen Lock</string>
    <string name="btn_next">Next Episode</string>
    <string name="btn_full_screen">Full Screen</string>
    <string name="string_screen_locked">Screen Locked, tap to unlock?</string>
</resources>

