<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/viewGroup_controller"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        android:layoutDirection="ltr"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <FrameLayout
                android:id="@+id/viewGroup_play_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <ImageButton
                    android:id="@id/exo_play"
                    style="@style/ExoMediaButton.Play"/>

                <ImageButton
                    android:id="@id/exo_pause"
                    style="@style/ExoMediaButton.Pause"/>
            </FrameLayout>




            <ImageButton
                android:id="@id/exo_rew"
                style="@style/ExoMediaButton.Previous"
                android:layout_gravity="center"
                android:layout_marginEnd="200dp"
                android:scaleType="center"
                android:src="@drawable/ic_replay" />

            <ImageButton
                android:id="@id/exo_ffwd"
                style="@style/ExoMediaButton.Next"
                android:layout_gravity="center"
                android:layout_marginStart="200dp"
                android:scaleType="center"
                android:src="@drawable/ic_forward" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_marginStart="18dp"
                tools:ignore="ContentDescription">

                <ImageView
                    android:id="@+id/ic_brightness"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:scaleType="center"
                    android:src="@drawable/ic_brightness" />

                <com.lukelorusso.verticalseekbar.VerticalSeekBar
                    android:id="@+id/verticalSeekBar"
                    android:layout_width="30dp"
                    android:layout_height="158dp"
                    android:layout_below="@id/ic_brightness"
                    android:layout_marginTop="8dp"
                    app:vsb_bar_background="#FFBEBEBE"
                    app:vsb_bar_corner_radius="20dp"
                    app:vsb_bar_progress="#FFf"
                    app:vsb_bar_width="7dp"
                    app:vsb_click_to_set_progress="true"
                    app:vsb_max_placeholder_position="inside"
                    app:vsb_min_placeholder_position="inside"
                    app:vsb_show_thumb="false" />

            </RelativeLayout>


        </FrameLayout>


        <LinearLayout
            android:id="@+id/controlsLayout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#CC000000"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/btn_lock_screen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_lock_open"
                android:drawablePadding="8dp"
                android:text="@string/btn_lock_screen"
                android:textAllCaps="false"
                android:textColor="#FFBEBEBE"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />


            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_list"
                android:drawablePadding="8dp"
                android:text="@string/btn_episode"
                android:textAllCaps="false"
                android:textColor="#FFBEBEBE"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_next"
                android:drawablePadding="8dp"
                android:text="@string/btn_next"
                android:textAllCaps="false"
                android:textColor="#FFBEBEBE"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_fullScreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@android:color/transparent"
                android:drawableStart="@drawable/ic_fullscreen_exit"
                android:drawablePadding="8dp"
                android:text="@string/btn_full_screen"
                android:textAllCaps="false"
                android:textColor="#FFBEBEBE"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <TextView
            android:id="@id/exo_position"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:includeFontPadding="false"
            android:textColor="#FFBEBEBE"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/controlsLayout"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="18:20" />

        <com.github.rubensousa.previewseekbar.exoplayer.PreviewTimeBar
            android:id="@+id/exo_progress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:buffered_color="#88ffffff"
            app:layout_constraintBottom_toBottomOf="@id/exo_position"
            app:layout_constraintEnd_toStartOf="@id/exo_duration"
            app:layout_constraintStart_toEndOf="@+id/exo_position"
            app:layout_constraintTop_toTopOf="@+id/exo_position"
            app:played_color="#f20"
            app:previewAnimationEnabled="true"
            app:previewFrameLayout="@id/previewFrameLayout"
            app:scrubber_color="#f20"
            app:scrubber_dragged_size="24dp"
            app:scrubber_enabled_size="16dp" />

        <TextView
            android:id="@id/exo_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="8dp"
            android:includeFontPadding="false"
            android:textColor="#FFBEBEBE"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBaseline_toBaselineOf="@id/exo_position"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="25:23" />

        <FrameLayout
            android:id="@+id/previewFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/video_frame"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/exo_progress"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent="0.35"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/video_frame_width"
                android:scaleType="fitXY" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RelativeLayout
        android:id="@+id/viewGroup_unlock_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="80dp"
        android:visibility="invisible"
        tools:visibility="visible">

        <ImageButton
            android:id="@+id/btn_unlock"
            style="@style/ExoMediaButton.Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_lock" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_screen_locked"
            android:layout_below="@id/btn_unlock"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="#FFFFFF" />
    </RelativeLayout>

</FrameLayout>